--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-native-tab-navigator": "^0.3.3",
     "react-native-timer": "^1.3.1",
     "react-native-vector-icons": "^4.2.0",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-navigation": "^1.0.0-beta.11",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
