--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-drawer": "^2.3.0",
+    "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-timer": "^1.3.1",
     "react-native-vector-icons": "^4.2.0",
