--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
+    "react-native-blur": "^3.1.2",
+    "react-native-check-box": "^1.0.4",
+    "react-native-checkbox": "^1.1.0",
     "react-native-drawer": "^2.3.0",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
+    "react-native-text-input-layout": "0.0.5",
     "react-native-timer": "^1.3.1",
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
-    "redux": "^3.7.1"
+    "redux": "^3.7.1",
+    "rn-textinputlayout": "^1.0.4"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
