--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.45.1",
     "react-native-check-box": "^1.0.4",
     "react-native-checkbox": "^1.1.0",
+    "react-native-device-info": "^0.10.2",
     "react-native-drawer": "^2.3.0",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
