--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-native-checkbox": "^1.1.0",
     "react-native-device-info": "^0.10.2",
     "react-native-drawer": "^2.3.0",
+    "react-native-md5": "^1.0.0",
+    "react-native-simple-toast": "0.0.6",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-text-input-layout": "0.0.5",
