--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
+    "react-native-animatable": "^1.2.2",
     "react-native-check-box": "^1.0.4",
     "react-native-checkbox": "^1.1.0",
     "react-native-device-info": "^0.10.2",
     "react-native-drawer": "^2.3.0",
+    "react-native-imei": "^0.1.0",
     "react-native-md5": "^1.0.0",
     "react-native-simple-toast": "0.0.6",
     "react-native-swipe-gestures": "^1.0.2",
