--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-drawer": "^2.3.0",
     "react-native-imei": "^0.1.0",
     "react-native-md5": "^1.0.0",
+    "react-native-progress": "^3.3.0",
     "react-native-simple-toast": "0.0.6",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
