xong loadmore listview

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native-checkbox": "^1.1.0",
     "react-native-device-info": "^0.10.2",
     "react-native-drawer": "^2.3.0",
-    "react-native-imei": "^0.1.0",
+    "react-native-gifted-listview": "0.0.15",
+    "react-native-image-progress": "^1.0.1",
     "react-native-md5": "^1.0.0",
     "react-native-progress": "^3.3.0",
     "react-native-simple-toast": "0.0.6",
