--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
+    "realm": "^1.8.3",
     "redux": "^3.7.1",
     "rn-textinputlayout": "^1.0.4"
   },
