--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-drawer": "^2.3.0",
     "react-native-gifted-listview": "0.0.15",
     "react-native-image-progress": "^1.0.1",
+    "react-native-maps": "^0.15.3",
     "react-native-md5": "^1.0.0",
     "react-native-progress": "^3.3.0",
     "react-native-simple-toast": "0.0.6",
