--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-image-progress": "^1.0.1",
     "react-native-maps": "^0.15.3",
     "react-native-md5": "^1.0.0",
+    "react-native-pathjs-charts": "0.0.29",
     "react-native-progress": "^3.3.0",
     "react-native-simple-toast": "0.0.6",
     "react-native-swipe-gestures": "^1.0.2",
