--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-animatable": "^1.2.2",
+    "react-native-calendars": "^1.4.0",
     "react-native-check-box": "^1.0.4",
     "react-native-checkbox": "^1.1.0",
+    "react-native-datepicker": "^1.6.0",
     "react-native-device-info": "^0.10.2",
     "react-native-drawer": "^2.3.0",
     "react-native-gifted-listview": "0.0.15",
