add dialog in order screen

--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-animatable": "^1.2.2",
+    "react-native-beautiful-image": "^1.0.4",
     "react-native-calendars": "^1.4.0",
+    "react-native-card-view": "0.0.3",
     "react-native-check-box": "^1.0.4",
     "react-native-checkbox": "^1.1.0",
     "react-native-datepicker": "^1.6.0",
     "react-native-device-info": "^0.10.2",
+    "react-native-dialog-component": "^0.2.11",
     "react-native-drawer": "^2.3.0",
+    "react-native-fit-image": "^1.4.9",
     "react-native-gifted-listview": "0.0.15",
     "react-native-image-progress": "^1.0.1",
     "react-native-maps": "^0.15.3",
     "react-native-md5": "^1.0.0",
     "react-native-pathjs-charts": "0.0.29",
+    "react-native-popup-dialog": "^0.9.29",
     "react-native-progress": "^3.3.0",
     "react-native-simple-toast": "0.0.6",
     "react-native-swipe-gestures": "^1.0.2",
