--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-animatable": "^1.2.2",
+    "react-native-atoz-listview": "0.0.7",
     "react-native-beautiful-image": "^1.0.4",
     "react-native-calendars": "^1.4.0",
     "react-native-card-view": "0.0.3",
@@ -27,6 +28,7 @@
     "react-native-pathjs-charts": "0.0.29",
     "react-native-popup-dialog": "^0.9.29",
     "react-native-progress": "^3.3.0",
+    "react-native-search-box": "0.0.9",
     "react-native-simple-toast": "0.0.6",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
