--- a/android/local.properties
+++ b/android/local.properties
@@ -10,5 +10,5 @@
 #Wed Jun 28 16:15:43 ICT 2017
 #ndk.dir=/Users/hao/Library/Android/sdk/ndk-bundle
 sdk.dir=/Users/hao/Library/Android/sdk
-#adb.dir=/Users/hao/Library/Android/sdk/platform-tools
+adb.dir=/Users/hao/Library/Android/sdk/platform-tools
 #emulator.dir=/Users/hao/Library/Android/sdk/tools
