--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-progress": "^3.3.0",
     "react-native-search-box": "0.0.9",
     "react-native-simple-toast": "0.0.6",
+    "react-native-svg": "^5.3.0",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-text-input-layout": "0.0.5",
