--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-card-view": "0.0.3",
     "react-native-check-box": "^1.0.4",
     "react-native-checkbox": "^1.1.0",
+    "react-native-communications": "^2.2.1",
     "react-native-datepicker": "^1.6.0",
     "react-native-device-info": "^0.10.2",
     "react-native-dialog-component": "^0.2.11",
