--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-device-info": "^0.10.2",
     "react-native-dialog-component": "^0.2.11",
     "react-native-drawer": "^2.3.0",
+    "react-native-elements": "^0.15.0",
     "react-native-fit-image": "^1.4.9",
     "react-native-gifted-listview": "0.0.15",
     "react-native-highcharts": "^1.0.1",
