--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-pathjs-charts": "0.0.29",
     "react-native-popup-dialog": "^0.9.29",
     "react-native-progress": "^3.3.0",
+    "react-native-root-toast": "^1.1.2",
     "react-native-search-box": "0.0.9",
     "react-native-simple-dialogs": "^0.2.3",
     "react-native-simple-toast": "0.0.6",
