--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,6 @@ project.xcworkspace
 
 # Android/IntelliJ
 #
-build/
 .idea
 .gradle
 local.properties
@@ -32,7 +31,7 @@ local.properties
 
 # node.js
 #
-
+node_modules/
 npm-debug.log
 yarn-error.log
 
