--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-device-info": "^0.10.2",
     "react-native-dialog-component": "^0.2.11",
     "react-native-drawer": "^2.3.0",
+    "react-native-dropdown": "0.0.6",
     "react-native-elements": "^0.15.0",
     "react-native-fit-image": "^1.4.9",
     "react-native-gifted-listview": "0.0.15",
@@ -29,6 +30,7 @@
     "react-native-image-progress": "^1.0.1",
     "react-native-maps": "^0.15.3",
     "react-native-md5": "^1.0.0",
+    "react-native-modal-dropdown": "^0.4.4",
     "react-native-pathjs-charts": "0.0.29",
     "react-native-popup-dialog": "^0.9.29",
     "react-native-progress": "^3.3.0",
