--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-native-dialog-component": "^0.2.11",
     "react-native-drawer": "^2.3.0",
     "react-native-dropdown": "0.0.6",
+    "react-native-dropdownalert": "^2.11.0",
     "react-native-elements": "^0.15.0",
     "react-native-fit-image": "^1.4.9",
     "react-native-gifted-listview": "0.0.15",
     "react-native-highcharts": "^1.0.1",
     "react-native-image-progress": "^1.0.1",
+    "react-native-list-view-select": "^1.0.4",
     "react-native-maps": "^0.15.3",
     "react-native-md5": "^1.0.0",
     "react-native-modal-dropdown": "^0.4.4",
