--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "react-native-md5": "^1.0.0",
     "react-native-modal-dropdown": "^0.4.4",
     "react-native-modalbox": "^1.4.2",
+    "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-pathjs-charts": "0.0.29",
     "react-native-popup-dialog": "^0.9.29",
     "react-native-progress": "^3.3.0",
+    "react-native-pull-to-refresh": "^2.1.1",
     "react-native-root-toast": "^1.1.2",
     "react-native-search-box": "0.0.9",
     "react-native-simple-dialogs": "^0.2.3",
