--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
+    "react-native-action-button": "^2.7.2",
     "react-native-animatable": "^1.2.2",
     "react-native-atoz-listview": "0.0.7",
     "react-native-autocomplete-input": "^3.3.1",
@@ -47,6 +48,7 @@
     "react-native-smart-badge": "^1.1.1",
     "react-native-svg": "^5.3.0",
     "react-native-swipe-gestures": "^1.0.2",
+    "react-native-swipeout": "^2.2.2",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-text-input-layout": "0.0.5",
     "react-native-timer": "^1.3.1",
