--- a/android/local.properties
+++ b/android/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 28 16:15:43 ICT 2017
+#Tue Aug 29 09:52:13 ICT 2017
+ndk.dir=/Users/hao/Library/Android/sdk/ndk-bundle
 sdk.dir=/Users/hao/Library/Android/sdk
