--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-action-button": "^2.7.2",
-    "react-native-animatable": "^1.2.2",
+    "react-native-animatable": "^1.2.3",
     "react-native-atoz-listview": "0.0.7",
     "react-native-autocomplete-input": "^3.3.1",
     "react-native-beautiful-image": "^1.0.4",
@@ -30,6 +30,7 @@
     "react-native-fit-image": "^1.4.9",
     "react-native-gifted-listview": "0.0.15",
     "react-native-highcharts": "^1.0.1",
+    "react-native-image-header-scroll-view": "^0.6.1",
     "react-native-image-progress": "^1.0.1",
     "react-native-list-view-select": "^1.0.4",
     "react-native-maps": "^0.15.3",
