--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-popup-dialog": "^0.9.29",
     "react-native-progress": "^3.3.0",
     "react-native-pull-to-refresh": "^2.1.1",
+    "react-native-radio-buttons": "^1.0.0",
     "react-native-root-toast": "^1.1.2",
     "react-native-search-box": "0.0.9",
     "react-native-simple-dialogs": "^0.2.3",
