--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-highcharts": "^1.0.1",
     "react-native-image-header-scroll-view": "^0.6.1",
     "react-native-image-progress": "^1.0.1",
+    "react-native-linear-gradient": "^2.3.0",
     "react-native-list-view-select": "^1.0.4",
     "react-native-maps": "^0.15.3",
     "react-native-md5": "^1.0.0",
