--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,6 +144,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-maps')
     compile project(':react-native-linear-gradient')
     compile project(':react-native-svg')
     compile(project(':react-native-maps')) {
