--- a/android/local.properties
+++ b/android/local.properties
@@ -8,3 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Sep 22 16:53:12 ICT 2017
+sdk.dir = /Users/hao/Library/Android/sdk
