--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-dropdownalert": "^2.11.0",
     "react-native-elements": "^0.15.0",
     "react-native-fit-image": "^1.4.9",
+    "react-native-gifted-chat": "^0.2.7",
     "react-native-gifted-listview": "0.0.15",
     "react-native-highcharts": "^1.0.1",
     "react-native-image-header-scroll-view": "^0.6.1",
