--- a/android/local.properties
+++ b/android/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 22 16:53:12 ICT 2017
-sdk.dir = /Users/hao/Library/Android/sdk
+#Sat Sep 30 10:27:13 ICT 2017
+ndk.dir=/Users/hao/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/hao/Library/Android/sdk
