--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "moment": "^2.18.1",
+    "randomcolor": "^0.5.3",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-action-button": "^2.7.2",
