--- a/android/local.properties
+++ b/android/local.properties
@@ -8,5 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Sep 30 10:27:13 ICT 2017
-ndk.dir=/Users/hao/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/hao/Library/Android/sdk
+sdk.dir = C:/Users/Quoc Viet Dang/AppData/Local/Android/sdk
