--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-highcharts": "^1.0.1",
     "react-native-image-header-scroll-view": "^0.6.1",
     "react-native-image-progress": "^1.0.1",
+    "react-native-indicator": "^0.6.8",
     "react-native-linear-gradient": "^2.3.0",
     "react-native-list-view-select": "^1.0.4",
     "react-native-loading-spinner-overlay": "^0.5.2",
