--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ksmart",
+  "name": "ksmart",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,70 +7,70 @@
     "test": "jest"
   },
   "dependencies": {
-    "moment": "^2.18.1",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
     "randomcolor": "^0.5.3",
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.45.1",
-    "react-native-action-button": "^2.7.2",
-    "react-native-animatable": "^1.2.3",
+    "react": "^16.4.1",
+    "react-native": "^0.56.0",
+    "react-native-action-button": "^2.8.5",
+    "react-native-animatable": "^1.3.0",
     "react-native-atoz-listview": "0.0.7",
-    "react-native-autocomplete-input": "^3.3.1",
+    "react-native-autocomplete-input": "^3.5.0",
     "react-native-beautiful-image": "^1.0.4",
-    "react-native-calendars": "^1.4.0",
+    "react-native-calendars": "^1.20.0",
     "react-native-card-view": "0.0.3",
-    "react-native-check-box": "^1.0.4",
-    "react-native-checkbox": "^1.1.0",
+    "react-native-check-box": "^2.1.3",
+    "react-native-checkbox": "^2.0.0",
     "react-native-communications": "^2.2.1",
-    "react-native-datepicker": "^1.6.0",
-    "react-native-device-info": "^0.10.2",
-    "react-native-dialog-component": "^0.2.11",
-    "react-native-drawer": "^2.3.0",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-device-info": "^0.22.5",
+    "react-native-dialog-component": "^0.2.17",
+    "react-native-drawer": "^2.5.0",
     "react-native-dropdown": "0.0.6",
-    "react-native-dropdownalert": "^2.11.0",
-    "react-native-elements": "^0.15.0",
-    "react-native-fit-image": "^1.4.9",
-    "react-native-gifted-chat": "^0.2.7",
+    "react-native-dropdownalert": "^3.5.0",
+    "react-native-elements": "^0.19.1",
+    "react-native-fit-image": "^1.5.4",
+    "react-native-gifted-chat": "^0.4.3",
     "react-native-gifted-listview": "0.0.15",
-    "react-native-highcharts": "^1.0.1",
-    "react-native-image-header-scroll-view": "^0.6.1",
-    "react-native-image-progress": "^1.0.1",
-    "react-native-indicator": "^0.6.8",
-    "react-native-linear-gradient": "^2.3.0",
+    "react-native-highcharts": "^1.0.2",
+    "react-native-image-header-scroll-view": "^0.8.2",
+    "react-native-image-progress": "^1.1.1",
+    "react-native-indicator": "^0.7.0",
+    "react-native-linear-gradient": "^2.4.2",
     "react-native-list-view-select": "^1.0.4",
     "react-native-loading-spinner-overlay": "^0.5.2",
-    "react-native-maps": "^0.15.3",
+    "react-native-maps": "^0.21.0",
     "react-native-md5": "^1.0.0",
-    "react-native-modal-dropdown": "^0.4.4",
-    "react-native-modalbox": "^1.4.2",
-    "react-native-parallax-scroll-view": "^0.19.0",
-    "react-native-pathjs-charts": "0.0.29",
-    "react-native-popup-dialog": "^0.9.29",
-    "react-native-progress": "^3.3.0",
-    "react-native-pull-to-refresh": "^2.1.1",
+    "react-native-modal-dropdown": "^0.6.2",
+    "react-native-modalbox": "^1.6.0",
+    "react-native-parallax-scroll-view": "^0.21.3",
+    "react-native-pathjs-charts": "0.0.34",
+    "react-native-popup-dialog": "^0.15.0",
+    "react-native-progress": "^3.5.0",
+    "react-native-pull-to-refresh": "^2.1.3",
     "react-native-radio-buttons": "^1.0.0",
-    "react-native-root-toast": "^1.1.2",
-    "react-native-search-box": "0.0.9",
-    "react-native-simple-dialogs": "^0.2.3",
-    "react-native-simple-toast": "0.0.6",
+    "react-native-root-toast": "^3.0.1",
+    "react-native-search-box": "0.0.19",
+    "react-native-simple-dialogs": "^0.4.1",
+    "react-native-simple-toast": "0.0.8",
     "react-native-smart-badge": "^1.1.1",
-    "react-native-svg": "^5.3.0",
+    "react-native-svg": "^6.5.2",
     "react-native-swipe-gestures": "^1.0.2",
-    "react-native-swipeout": "^2.2.2",
-    "react-native-tab-navigator": "^0.3.3",
+    "react-native-swipeout": "^2.3.6",
+    "react-native-tab-navigator": "^0.3.4",
     "react-native-text-input-layout": "0.0.5",
-    "react-native-timer": "^1.3.1",
-    "react-native-vector-icons": "^4.2.0",
-    "react-navigation": "^1.0.0-beta.11",
-    "react-redux": "^5.0.5",
-    "redux": "^3.7.1",
-    "rn-textinputlayout": "^1.0.4",
-    "rn-viewpager": "^1.2.3"
+    "react-native-timer": "^1.3.4",
+    "react-native-vector-icons": "^5.0.0",
+    "react-navigation": "^2.12.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "rn-viewpager": "^1.2.9"
   },
   "devDependencies": {
-    "babel-jest": "20.0.3",
-    "babel-preset-react-native": "2.0.0",
-    "jest": "20.0.4",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "babel-jest": "23.4.2",
+    "babel-preset-react-native": "5.0.2",
+    "jest": "23.5.0",
+    "react-test-renderer": "16.4.1"
   },
   "jest": {
     "preset": "react-native"
