--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,9 @@ DerivedData
 *.xcuserstate
 project.xcworkspace
 
-# Anzroid/IntelliJ
+# Android/IntelliJ
 #
+build/
 .idea
 .gradle
 local.properties
@@ -31,21 +32,25 @@ local.properties
 
 # node.js
 #
+node_modules/
 npm-debug.log
 yarn-error.log
 
 # BUCK
 buck-out/
 \.buckd/
-
+*.keystore
 
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
-# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
+# https://docs.fastlane.tools/best-practices/source-control/
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
+
+# Bundle artifact
+*.jsbundle
